	  specific code. 
	  Fixed by: basv@sara.nl 

	* Added a new config parameter: tmpdir: /var/tmp, default is '/tmp'
	  All functions now use this new parameter and use OS independent 
	  path functions. 
	  Implemented by: basv@sara.nl 

	* fixed and a creating directory problem email2trac.spec file
	  Fixed by: artrus at netzero dot net

2007-04-27

	* Added check to catch an error when attachment size
	  is too large, bug #1153
	  Author: Bas van der Vlies

	* Wrap long line into user given length, use_textwrap: 72. Wraps lines
	  greater then 72 chars, #1123
	  Author: Bas van der Vlies & 
	          Rainer Sokoll (r.sokoll at intershop dot de)

	* Fixed a dutch spelling, #1295
	  Author: Rainer Sokoll (r.sokoll at intershop dot de)

        * email2trac.py : blacklist (don't create ticket) mail from
	  MAILER-DAEMON to avoid loops
	  Author: Michel Jouvin <jouvin at lal dot in2p3 dot fr>

	* msg.bad.txt : add an example of message from MAILER-DAEMON
	  Author: Michel Jouvin <jouvin at lal dot in2p3 dot fr>

2006-12-08
	* email2trac.py:
	  - Added verbatim_format option default is: 1
	  Added by : Bas van der Vlies

	  - Added strip_signature option default is: 0 
	  Added by : Bas van der Vlies

	  - Fixed some unicode errors, thanks to japanes SPAM. 
	    If we can not unicode email message then display which
	    charset must be installed in ticket description. Else we 
	    trac crashed with unicode errors ;-(
	  Fixed by: Bas van der Vlies

	  - Fixed statements: str + unicode, raises an exception if 
	    non-ascii value in unicode object.

	  - Forgot to unicode the author. So we got an error if we use 
	    the mailto_link option in email2trac.conf. 
	  Fixed by: Bas van der Vlies

	* delete_spam.py:
	  - Now works for version 0.10 with new API-functions
	  Fixed by: Bas van der Vlies

	* Makefile.in
	  - Added install-conf. Install email2trac.conf if there is none
	    installed.
	  Fixed by: Bas van der Vlies

2006-10-27

	* run_email2trac.c. 
	